--- a/SITE BARBEARIA/style.css
+++ b/SITE BARBEARIA/style.css
@@ -5,7 +5,7 @@ body {
     width: 100%;
 }
 .principal {
-    background-color: #green;
+    background-color: #cccccc;
     padding: 30px;
 }
 .titulo-principal {
