--- a/SITE BARBEARIA/style.css
+++ b/SITE BARBEARIA/style.css
@@ -9,73 +9,85 @@ header {
 }
 nav {
     position: absolute;
-    top: 110px;
+    top: 120px;
     right: 0;
-}
-nav ul {
-    display: inline;
-    margin: 0 0 0 0;
 }
 nav li {
     display: inline;
-    margin: 0 0 0 15px;
 }
 nav a {
     text-transform: uppercase;
     color: #000000;
     font-weight: bold;
-    text-decoration: none;
     font-size: 22px;
+    text-decoration: none;
+    margin: 0 0 0 15px;
 }
 nav a:hover {
     color: #c78c19;
     text-decoration: underline;
 }
-
-#banner {
-    width: 100%;
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
-.principal {
-    background-color: #cccccc;
-    padding: 30px;
-}
-.titulo-principal {
-    padding-left: 20px;
-}
-.titulo-centralizado {
-    text-align: center;
-}
-p {
-    text-align: center;
-}
-#missao {
-    font-size: 20px;
-}
-em strong {
-    color: red;
-}
-.itens{
-    font-style: italic;
-}
-.beneficios{
-    background-color: #ffffff;
-    padding: 20px;
-}
-ul {
+.produtos li {
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
-.imagembeneficios {
-    width: 50%;
+.produtos li:hover{
+    border-color: #c78c19;
+}
+.produtos li:active{
+    border-color: green;
+}
+.produtos li:hover h2{
+    font-size: 34px;
+}
+.produtos h2 {
+   font-size: 30px;
+   font-weight: bold; 
+}
+.produto-descriçao {
+    font-size: 18px;
+}
+.produto-preço {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 footer {
-    background-image: url("bg.jpg");
+    background: url("bg.jpg");
     text-align: center;
     padding: 40px 0;
 }
 .copyright {
     color: #ffffff;
     font-size: 13px;
+}
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+form {
+    margin: 40px 0;
+}
+form label {
+    display: block;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+form input {
+    display: block;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    width: 50%;
 }
