--- a/SITE BARBEARIA/style-home.css
+++ b/SITE BARBEARIA/style-home.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+/*CSS do Cabeçalho*/
 header {
     background: #bbbbbb;
     padding: 20px 0;
@@ -31,28 +35,32 @@ nav a:hover {
     color: #c78c19;
     text-decoration: underline;
 }
-
-#banner {
+/*CSS do Conteudo Principal*/
+.banner {
     width: 100%;
 }
-.principal {
-    background-color: #cccccc;
-    padding: 30px;
-}
 .titulo-principal {
-    padding-left: 20px;
-}
-.titulo-centralizado {
     text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
 }
-p {
-    text-align: center;
+.principal p {
+    margin: 0 0 1em;
+}
+.principal strong {
+    font-weight: bold;
+}
+.principal em {
+    font-style: italic;
+}
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
 }
 #missao {
     font-size: 20px;
-}
-em strong {
-    color: red;
 }
 .itens{
     font-style: italic;
@@ -70,6 +78,7 @@ ul {
 .imagembeneficios {
     width: 50%;
 }
+/*CSS do Rodapé */
 footer {
     background-image: url("bg.jpg");
     text-align: center;
