--- a/SITE BARBEARIA/style.css
+++ b/SITE BARBEARIA/style.css
@@ -95,8 +95,7 @@ footer {
 }
 
 main {
-	width: 940px;
-	margin: 0 auto;
+	
 }
 
 form {
@@ -165,6 +164,12 @@ td, th {
 	margin: 0 0 1em;
 	clear: left;
 }
+.principal{
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
 
 .principal p {
 	margin: 0 0 1em;
@@ -183,18 +188,37 @@ td, th {
 	float: left;
 	margin: 0 20px 20px 0;
 }
+.beneficios{
+	padding: 3em 0;
+	background: #888888;
+}
+.conteudo-beneficios{
+	width: 640px;
+	margin: 0 auto;
+}
+.lista-beneficios{
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
 
-.imagembeneficios {
+.imagem-beneficios {
 	width: 60%;
+	margin: 0 auto;
 }
 
 .mapa {
 	padding: 3em 0;
+	background: linear-gradient(#FEFEFE,#888888);
 }
 
 .mapa p {
 	margin: 0 0 2em;
 	text-align: center;
+}
+.mapa-conteudo{
+	width: 940px;
+	margin: 0 auto;
 }
 
 .video {
