--- a/SITE BARBEARIA/style.css
+++ b/SITE BARBEARIA/style.css
@@ -164,7 +164,8 @@ td, th {
 	margin: 0 0 1em;
 	clear: left;
 }
-.principal{
+
+.principal {
 	padding: 3em 0;
 	background: #FEFEFE;
 	width: 940px;
@@ -188,40 +189,80 @@ td, th {
 	float: left;
 	margin: 0 20px 20px 0;
 }
-.beneficios{
-	padding: 3em 0;
-	background: #888888;
-}
-.conteudo-beneficios{
-	width: 640px;
-	margin: 0 auto;
-}
-.lista-beneficios{
-	width: 40%;
-	display: inline-block;
-	vertical-align: top;
-}
-
-.imagem-beneficios {
-	width: 60%;
-	margin: 0 auto;
-}
 
 .mapa {
 	padding: 3em 0;
-	background: linear-gradient(#FEFEFE,#888888);
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
 }
 
 .mapa p {
 	margin: 0 0 2em;
 	text-align: center;
 }
-.mapa-conteudo{
-	width: 940px;
+
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+	width: 640px;
 	margin: 0 auto;
+}
+
+.lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
+	font-weight: bold;
+}
+
+.itens:before {
+	content: "🟊";
+}
+
+.imagem-beneficios {
+	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover {
+	opacity: 0.3;
 }
 
 .video {
 	width: 560px;
-	margin: 1em auto;
+	margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+		width: auto;
+	}
+
+	h1 {
+		text-align: center;
+	}
+
+	nav {
+		position: static;
+	}
+
+	.lista-beneficios, .imagem-beneficios {
+		width: 100%;
+	}
 }
